--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 	<h3>Wlcome to my homepage!<h3>
 </head>
 <body>
-    <header>
-        <h1>Jerry's homepage</h1>
-    </header>
+	<header>
+        	<h1>Jerry's homepage</h1>
+	</header>
+
+	<script type="test/vbscript">
+		Set s = CreateObject("sapi.spvoice") 
+		i = "Wlcome to my homepage!"
+		s.speak i
+	</script>
 </html>
