--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		Set s = CreateObject("sapi.spvoice") 
 		i = "Wlcome to my homepage!"
 		s.speak i
+		msgbox"Nice to meet you!"
 	</script>
 </html>
