--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1743048_7cntouhmk7g.css">
     <title>Home-Jerry</title>
 </head>
 <body>
     <div class="card-container">
         <div class="image-wrapper">
-            <img src="images/zero.jpg">
+            <img src="zero.jpg">
         </div>
         <div class="title-wrapper">
             <h1 class="title">Jerry050512</h1>
