--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1743048_7cntouhmk7g.css">
+    <style type="text/css">a {text-decoration: none}</style>
     <title>Home-Jerry</title>
     <style type="text/css">
         div{
@@ -17,8 +18,9 @@
 <body>
     <div class="card-container">
         <div class="image-wrapper">
-            <img src="zero.jpg">
+            <img src="images/zero.jpg">
         </div>
+
         <div class="title-wrapper">
             <h1 class="title">Jerry050512</h1>
             <p class="subtitle">An up in bilibili.</p>
@@ -37,6 +39,11 @@
                     </div>
                 </ul></nobr>
             </div>
+        </div>
+
+        <div class="quick-url">
+            <a href="site navigation/site navigation.html" >Site Navigation</a>
+            <a href="about/About.html">About Me</a>
         </div>
     </div>
 </body>
