--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style for a.css">
+    <link rel="stylesheet" href="style for a.css">
     <title>关于我</title>
 </head>
 <body>
